<?xml version="1.0"?>
<package>
 	<name>youbot_forklift_ros_interface</name>
 	<version>0.1.0</version>
 	<description>The ROS interface for youbot forklift</description>

 	<license>BSD</license>
 	<maintainer email="florek-jasinska@locomotec.com">Monika Florek-Jasinska</maintainer>
 	<author email="florek-jasinska@locomotec.com">Monika Florek-Jasinska</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>youbot_forklift_control</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>youbot_forklift_control</run_depend>

</package>
